# formigo

./: .gitignore  CNAME  formigo.ts  index.html  manifest.json  node.d.ts  node.d.ts.map  node.deps.json  node.js  node.js.map  node.locale=en.json  node.locale=ru.json  node.meta.tree  node.mjs  node.test.js  node.test.js.map  node.view.tree  package.json  test.html  web.d.ts  web.d.ts.map  web.deps.json  web.js  web.js.map  web.locale=en.json  web.meta.tree  web.mjs  web.test.js  web.test.js.map  web.view.tree
.github/workflows/: deploy.yml  tauri.yml
ai/: ai.view.tree  ai.view.ts
app/: formigo.meta.tree  formigo.view.tree  formigo.view.ts
bog/formigo/: .gitignore
bog/formigo/ai/: ai.view.css.ts
bog/formigo/app/: formigo.view.css.ts  formigo.view.tree  formigo.view.ts
bog/formigo/builder/: builder.view.css.ts  builder.view.tree
bog/formigo/dashboard/: dashboard.view.css.ts  dashboard.view.tree  dashboard.view.ts
bog/formigo/filler/: filler.view.css.ts  filler.view.ts
bog/formigo/settings/: settings.view.tree  settings.view.ts
builder/: builder.view.css.ts  builder.view.tree  builder.view.ts
builder/props/: props.view.css.ts  props.view.tree  props.view.ts
dashboard/: dashboard.view.css.ts
export/: export.ts
filler/: filler.view.css.ts  filler.view.tree
filler/step/: step.view.css.ts  step.view.tree  step.view.ts
settings/: settings.view.css.ts
src-tauri/: Cargo.toml  tauri.conf.json
submissions/: submissions.view.css.ts  submissions.view.ts
submissions/detail/: detail.view.css.ts  detail.view.tree  detail.view.ts
(+12 files in other folders)
