[package]
name = "tauri_mol_app"
version = "0.1.0"
description = "Tauri wrapper for MAM app"
authors = ["you"]
edition = "2021"

[lib]
name = "tauri_mol_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
